# HistEqualization-16bit

./: CMakeLists.txt  HistEqualization.cpp  HistEqualization.h  README.md  Unit-Test.cpp  main.cpp
TestFolder/: ConsoleApplication1.cpp
test-images/: 16bit_black.TIF  16bit_white.TIF  8bit_rgb_image.TIF
